# python-project-cookiecutter

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
