[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author}}"]

[tool.poetry.dependencies]
python = "^3.9.7"

[tool.poetry.dev-dependencies]
isort = {extras = ["pyproject"], version = "^5.9.3"}
black = "^21.9b0"
mypy = "^0.910"
flake8 = "^3.9.2"
coverage = {extras = ["toml"], version = "^6.0.1"}
pytest = "^6.2.5"
pylint = "^2.11.1"
pre-commit = "^2.15.0"
bandit = "^1.7.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["{{cookiecutter.source_directory}}", "tests"]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
